[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
actix-web-actors = "4.2.0"
actix = "0.13.1"
tokio = { version = "1.24.2", features = ["full"] }
futures-util = { version = "0.3.17", default-features = false, features = ["std", "sink"] }
awc = "3.2"
tokio-stream = "0.1.8"
actix-files = "0.6.2"
rand = "0.8.5"
log = "0.4.20"
env_logger = "0.10.0"
enigo = "0.1.3"
